<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textColor="@color/colorComplement5"
        android:textSize="20dp"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/fragConfig_msgChangeSol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:text="@string/fragConfig_msgCurrentValue"
            android:layout_width="115dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fragConfig_tvCurrentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <CheckBox
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/fragConfig_chkRandom"
        android:text="@string/fragConfig_chkRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:paddingTop="10dp"
        android:id="@+id/fragConfig_linearHide"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:text="@string/fragConfig_msgNewValue"
            android:layout_width="115dp"
            android:layout_height="wrap_content" />

        <EditText
            android:textAlignment="gravity"
            android:inputType="number"
            android:maxLength="4"
            android:singleLine="true"
            android:textSize="14sp"
            android:id="@+id/fragConfig_etNewSol"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:textColor="@color/colorComplement1"
        android:textAllCaps="false"
        android:background="@color/colorBlack"
        android:text="@string/fragConfig_btnApply"
        android:id="@+id/fragConfig_btnApply"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</LinearLayout>